(Entities Management) Improved entity management - List of entities accessible by the user - Ability to edit the name of an entity - Edition and deletion of the root entity are now locked - Complete code reorganization for better readability - When updating an entity, the parent_id is now explicitly provided to ensure consistency in the GLPI hierarchy
(cherry picked from commit 6a35f7f35a21f89b04baaabaa737d57f3751e270)

--- a/web/graph/global.css
+++ b/web/graph/global.css
@@ -1700,6 +1700,38 @@ li.manageusersg a {
     opacity:0.5;
 }
 
+li.editg a {
+    padding: 5px 0px  5px 22px;
+    margin: 0 0px 0 0px;
+    background-image: url("../img/actions/edit.svg");
+    background-repeat: no-repeat;
+    background-position: left top;
+    background-size: 25px 25px;
+    line-height: 18px;
+    text-decoration: none;
+    color: #FFF;
+    filter: grayscale(50%);
+    -webkit-filter: grayscale(50%);
+    -moz-filter: grayscale(50%);
+    opacity:0.5;
+}
+
+li.deleteg a {
+    padding: 5px 0px  5px 22px;
+    margin: 0 0px 0 0px;
+    background-image: url("../img/actions/delete.svg");
+    background-repeat: no-repeat;
+    background-position: left top;
+    background-size: 25px 25px;
+    line-height: 18px;
+    text-decoration: none;
+    color: #FFF;
+    filter: grayscale(50%);
+    -webkit-filter: grayscale(50%);
+    -moz-filter: grayscale(50%);
+    opacity:0.5;
+}
+
 li.download a {
     padding: 5px 0px  5px 22px;
     margin: 0 0px 0 0px;
